# DEX-OS-V1

./: .env.example  .gitignore  AGENTS.md  AUTO-SUGGESTION.MD  CHANGELOG.md  CHANGES_SUMMARY.md  COMPLETE_DEX_OS_ROADMAP.md  Cargo.toml  DEVELOPMENT.md  DEX-OS-V1.csv  DEX_SECURITY_TESTING_FEATURES.csv  EFFECTIVE_USE_28_RULES.MD  GIT-INSTALLATION-GUIDE.md  HARDENING-DEX-OS-V1.MD  IMPLEMENTATION_SUMMARY.md  INTERACT-WITH-RULE.md  LENDING_IMPLEMENTATION_SUMMARY.md  LENDING_RULES_AND_COMMIT_SUMMARY.md  LENDING_SECURITY_ANALYSIS.md  LENDING_TESTING_PLAN.md  MARKDOWN-SYNTAX.MD  MAX_HEAP_BEST_ROUTE_SELECTION_IMPLEMENTATION.md  MISSING_FEATURES_IMPLEMENTATION_PLAN.md  NEW_FEATURES_RULES_AND_COMMIT_SUMMARY.md  NEW_FEATURES_SECURITY_ANALYSIS.md  NEW_FEATURES_TESTING_PLAN.md  PRIORITY_1_COMPLETE_IMPLEMENTATION_SUMMARY.md  PRIORITY_1_DEX_AGGREGATOR_FEATURES_SUMMARY.md  PRIORITY_1_DEX_AGGREGATOR_IMPLEMENTATION.md  PRIORITY_1_IMPLEMENTATION_SUMMARY.md  PRIORITY_1_ORACLE_IMPLEMENTATION.md  PRIORITY_3_AVL_TREE_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUANTUM_CONSENSUS_IMPLEMENTATION_SUMMARY.md  QUANTUM_CONSENSUS_SECURITY_ANALYSIS.md  QUANTUM_CONSENSUS_TESTING_PLAN.md  RAMP.MD  README.md  RECOMMENDATIONS.md  RULE-BASE-TASK.MD  (+42 more)
.found/: jeetway-vip and club.md  jeetway.js  report.md  sec.md
.gnupg/: pubring.kbx
.reference/: security_tests_full.csv  testing_web3_full.csv
dex-api/: Cargo.toml
dex-api/src/: auth.rs  challenge.rs  config.rs  lib.rs  main.rs
dex-core/: Cargo.toml
dex-core/src/: amm.rs  avl_tree.rs  cross_chain_asset_mapping.rs  fee_distribution.rs  fee_management.rs  lending.rs  lib.rs  merkle_tree.rs  multisig_wallet.rs  orderbook.rs  partial_fill.rs  path_routing.rs  (+6 more)
dex-db/: Cargo.toml
dex-db/src/: lib.rs  migrations.rs
dex-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  to-dos-in-dex-ui.md  tsconfig.json  vite.config.ts
dex-wasm/: Cargo.toml
dex-wasm/src/: lib.rs
tests/: integration_test.rs  quantum_consensus_test.rs
(+11 files in other folders)
