[package]
name = "dex-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
dex-core = { path = "../dex-core" }
dex-db = { path = "../dex-db" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
warp = "0.3"
thiserror = "1.0"
lazy_static = "1.4"
regex = "1.10"
dotenvy = "0.15"
secrecy = "0.8"
jsonwebtoken = "9"
clap = { version = "4.5", features = ["derive"] }
ethers-core = "2.0"
rand = "0.8"
futures-util = "0.3"
